# advent-of-code

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
aoc/: __init__.py
aoc/2019/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  intcode.py  testdata.json
aoc/2020/: README.md  __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
aoc/2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
tests/: test_examples.py
tests/2020/01/: example.txt
tests/2020/05/: d.txt
tests/2020/07/: a.txt
tests/2020/10/: a.txt  b.txt
tests/2020/25/: example.txt
tests/2021/08/: example.txt
tests/2021/10/: example.txt
tests/2021/13/: example.txt
tests/2021/16/: 2a.txt  2b.txt  2c.txt  2d.txt  2e.txt  2f.txt  2g.txt  2h.txt
